EA-2190 few tweaks